hand_reader/log/build_2025-04-03_21-34-26/hand_reader/stderr.log
  File "/root/hand_reader/install/hand_reader/lib/python3.10/site-packages/hand_reader/hand_reader_node.py", line 51
    except
          ^
SyntaxError: expected ':'

